add faucet and local node
